2001-10-17  Mikael Hallendal  <micke@codefactory.se>

	* src/book-index.c: 
	(book_index_new): unselect all, fixes bug #246 in CFB.
	
	- include gdk/gdkkeysyms.h
	- fixes bug #245 in CFB.
	(book_index_key_press_event): new function, impl.
	(book_index_get_scrolled): selection_mode = GTK_SELECTION_SINGLE.
	(book_index_class_init): override key_press_event.

2001-10-17  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added es and zh_TW to ALL_LINGUAS.

2001-10-16  Mikael Hallendal  <micke@codefactory.se>

	* src/book-index.c:
	(book_index_add_book): gtk_clist_sort, fixes bug #203 in CFB.
	(book_index_populate_tree): Call gtk_clist_sort just to make sure.

	* ui/devhelp.glade: 
	- removed mainapp, uses BonoboWindow now. Fixes bug #236 in
	  CF-bugzilla.
	- Changed Devhelp -> DevHelp, fixes #237 in CFB.

	* src/devhelp-controller.c:
	(impl_DevHelp_Controller_openURI): copy the CORBA_char *str_uri
	before starting to use it. fixes bug #201 in CF-bugzilla.

2001-10-15  Richard Hult  <rhult@codefactory.se>

	* devhelp.spec.in: Install libs, patch from 
	mike@gtnorthern.demon.co.uk.

2001-10-15  Mikael Hallendal  <micke@codefactory.se>

	* src/devhelp-controller.c (devhelp_controller_init): use
	DATA_DIR/devhelp instead of of DATA_DIR/devhelp/spec.

	* configure.in: bumped version to 0.2

	* NEWS: updated for 0.2

2001-10-13  Richard Hult  <rhult@codefactory.se>

	* devhelp.desktop.in: s/Devhelp/DevHelp/.

	* src/html-widget.c (html_widget_open_uri): Comment out annoying
	debugging message.

	* src/devhelp-search.c (devhelp_search_entry_key_press_cb): 
	Ugly hack to stop the entry to lose focus when using the
	left/right arrows to navigate the text.

	* src/devhelp-window.c (note_change_page, note_page_mapped,
	note_page_unmapped, note_page_setup_signals,
	notebook_append_page_with_accelerator): Added helper functions to
	add accelerators to the notebook pages.
	(devhelp_window_populate): Use them here.

2001-10-11  Mikael Hallendal  <micke@codefactory.se>
