@@ -1,5 +1,11 @@
 2001-10-17  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/devhelp-controller.c:
+	- fixes bug #195 in CFB.
+	(devhelp_controller_open): call bookshelf_open_document.
+	(cmd_back_cb): set back button unsensitive while processing.
+	(cmd_forward_cb): set forward button unsensitive while processing.
+
 	* src/book-index.c: 
 	(book_index_new): unselect all, fixes bug #246 in CFB.
 	
